# fund-admin

./: .gitignore  README.md
.github/workflows/: firebase-hosting-pull-request.yml
backend/: .gitignore  Dockerfile  README.md  cors.json  pyproject.toml  requirements.txt  test.ipynb
backend/config/: README.md  cors.json
backend/data/pdf_storage/: ir_serve.pdf.txt  ir_solize.pdf.txt
backend/data/process/: main.yaml
backend/data/table/: business_overview  business_targets
backend/src/: dependencies.py  server.py  settings.py
backend/src/core/dependencies/: auth.py  cloud_tasks.py  external.py
backend/src/core/models/: financial.py  plan.py
backend/src/core/routers/: _base.py  auth.py  data.py  explorer.py  financial.py  image.py  market.py  parameter.py  project.py  retriever.py  services.py  summary.py  upload.py  worker.py
backend/src/core/routers/projection/: __init__.py  profit_and_loss.py  saas.py
backend/src/core/services/: auth_service.py  firebase_client.py  firebase_driver.py  openai_client.py  pdf_processing.py
backend/src/core/services/endpoints/: projection.py
backend/src/core/services/exploler/: formatter.py
backend/src/core/services/query/: fetch_saas_metrics.py  profit_and_loss.py
backend/src/core/services/upload/: generate_summary.py  pdf_processor.py  table_processor.py
backend/src/core/services/worker/: chat_client.py  cloud_tasks.py  models.py
backend/src/dependencies/: auth.py  document_repository.py  external.py  weaviate_client.py
backend/src/repositories/: abstract.py  weaviate_repository.py
backend/src/schemas/: documents.py
backend/util/: get_payload_concurrentry.py
frontend/: .firebaserc  .gitignore  README.md  index.html  next.config.mjs  package-lock.json  package.json  test.md  tsconfig.json
frontend-app/: Dockerfile  README.md  index.html  main.js  package-lock.json  package.json
frontend-app/js/: app.js  fetchUploadFiles.js  uploadFile.js
frontend-app/styles/: styles.css
frontend/.firebase/: hosting.b3V0.cache
frontend/app/: layout.tsx  page.tsx
frontend/js/: app.js
frontend/public/favicons/: site.webmanifest
frontend/src/api/: api.ts
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/signup-complete/: page.tsx
frontend/src/app/sub/: page.tsx
frontend/src/components/: AnalysisResults.tsx  AnalysisStatus.tsx  FileDropdown.tsx  FileList.tsx  FileUpload.tsx  KeyPersons.tsx  ProtectedRoute.tsx  ResultTabs.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/auth/: SignInForm.tsx  SignUpForm.tsx
frontend/src/components/dashboard/: ExcelAnalysis.tsx  LlmOperator.tsx  PdfAnalyzer.tsx  ProjectManager.tsx  ResultReport.tsx  SalesData.module.css  SimpleAnalysis.tsx
frontend/src/components/dashboard/Chat/: ChatInput.tsx  ChatMain.tsx  ChatPane.tsx  ChatTabs.tsx  FileList.tsx  FileListWithChat.tsx  chatFormat.tsx  types.ts
frontend/src/components/dashboard/DocumentsSummary/: DetailModal.tsx  ImageSummaryList.tsx  SummaryModal.tsx
frontend/src/components/dashboard/Generator/: DetailModal.tsx  FinancialTable.css  ImageListComponent.tsx  ImageSummaryList.tsx  ImageUUIDViewer.tsx  generateBusinessPlan.tsx  generateBusinessPlan2.tsx
frontend/src/components/dashboard/IssueAnalysis/: AnalysisStart.tsx  IssueAnalysisComponent.tsx  QuestionAnswerComponent.tsx
frontend/src/components/dashboard/Projection/: ExcelExportButton.tsx  MainTable.tsx  exportToExcel.tsx  types.ts
frontend/src/components/dashboard/TableAnalysis/: ABEJAReport.tsx  (+11 more)
frontend/src/components/top/: Top.module.css  page.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: fetchDocument.ts  fetchTable.ts  useFetchDocument.ts  useFetchFiles.ts  useFetchTable.ts
frontend/src/services/: firebase.ts
frontend/src/styles/: dashboard.css
frontend/src/utils/: api.ts
frontend/styles/: styles.css
(+14 files in other folders)
