[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tetsu.Kuribayashi <tktkchestnut[gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.3"
openai = "^1.40.3"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
